2005-11-29  Michael Snyder  <msnyder@redhat.com>

	* linux-fork.c (process_command): New command, new function.
	Switch fork contexts by process id, rather than fork id.
	(linux_fork_context): New function.  Abstract out the guts
	of restart_command, to be called by process_command and 
	fork_command.
	(fork_command): New function.  Look up a fork id, call 
	linux_fork_context.
	(_initialize_linux_fork): Add new "process" command.

2005-11-28  Michael Snyder  <msnyder@redhat.com>

	* linux-fork.c: New file.  Move fork list and fork commands here.
	* linux-fork.h: Now acts as interface between linux-nat and linux-fork.
	* linux-nat.c: Move all fork-related functions to linux-fork.c.
	(child_mourn_inferior): Use new API to linux-fork, instead of
	manipulating the fork list directly.
	(kill_inferior): Ditto.
	* Makefile.in: Add linux-fork.c.
	* config/i386/linux.mh: Add linux-fork.o.

2005-11-26  Michael Snyder  <msnyder@redhat.com>

	* linux-nat.c (super_mourn_inferior): New function pointer.
	(child_mourn_inferior): New method, overrides to_mourn_inferior.
	Handles multiple forks.
	(linux_target): Intercept to_mourn_inferior, save pointer to
	parent method.

2005-11-26  Michael Snyder  <msnyder@redhat.com>

	* linux-fork.h: New file.
	* linux-nat.c: Include linux-fork.h, remove forward declarations.
	(kill_inferior): Loop over forks and PTRACE_KILL them all.
	(add_fork): Special case -- insert original fork as special
	zeroeth element in list.
	(info_forks_command): Use current PC instead of savedregs pc
	for current fork.  If no SAL, print a minsym.  Identify the
	zeroeth fork as "main process".	

2005-11-25  Michael Snyder  <msnyder@redhat.com>

	* linux-nat.c (restart_auto_finish): New set/show variable.
	(restart_command): Automatically do "finish" a few times
	on request.

	* infrun.c (set_last_target_status): Remove, replace with following.
	(nullify_last_target_wait_ptid): New function.  Now we don't need
	to save this bit of state in linux-nat.
